# glitch

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
examples/: advanced.py  basic.py  run_glitch_bench.py
src/: __main__.py  core.py  health.py  utils.py
src/glitch/: __init__.py  analyzer.py  cli.py  models.py  report.py  scorer.py
src/glitch/probes/: __init__.py  causal.py  physical.py  self_model.py  social.py  spatial.py  temporal.py
tests/: test_benchmark.py  test_core.py  test_integration.py  test_probes.py  test_scorer.py
